--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -39,3 +39,20 @@ spring:
             scope:
               - email
               - public_profile
+
+          naver:
+            client-id: g1U5lR4UnvavwMI5XS1Y
+            client-secret: DKnleHE7mY
+            scope:
+              - name
+              - email
+            client-name: Naver
+            authorization-grant-type: authorization_code # code를 받아와서 인증
+            redirect-uri: http://localhost:8080/login/oauth2/code/naver
+
+        provider:
+          naver:
+            authorization-uri: https://nid.naver.com/oauth2.0/authorize
+            token-uri: https://nid.naver.com/oauth2.0/token
+            user-info-uri: https://openapi.naver.com/v1/nid/me
+            user-name-attribute: response # 회원 정보를 json으로 받는데 response라는 키값으로 네이버가 리턴해줌.
